--- a/src/components/css/CountryCard.css
+++ b/src/components/css/CountryCard.css
@@ -1,4 +1,3 @@
-/* Container for the country card */
 .country-card {
     display: flex;
     flex-direction: column;
@@ -9,19 +8,17 @@
     height: fit-content;
     border: 1px solid #ccc;
     border-radius: 15px;
-    /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
     box-shadow: 
-    0 0 5px rgba(192, 192, 192, 0.8),   /* Inner glow */
-    0 0 10px rgba(192, 192, 192, 0.6),  /* Medium glow */
-    0 0 15px rgba(192, 192, 192, 0.4),  /* Outer glow */
-    0 0 20px rgba(192, 192, 192, 0.3);  /* Strongest outer glow */
+    0 0 5px rgba(192, 192, 192, 0.8),  
+    0 0 10px rgba(192, 192, 192, 0.6),  
+    0 0 15px rgba(192, 192, 192, 0.4), 
+    0 0 20px rgba(192, 192, 192, 0.3);  
     background-color: rgb(247, 241, 241);
     transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
     opacity: 0;
     animation: slideIn 0.6s ease-in-out forwards;
   }
   
-  /* Style for the image inside the card */
   .country-card img {
     width: 100%;
     max-width: 150px;
@@ -30,9 +27,6 @@
     object-fit: cover;
   }
 
-
-  
-  /* Style for the country name */
   .country-card h3 {
     margin-top: 10px;
     font-size: 1.2rem;
@@ -42,7 +36,6 @@
   
  
   
-  /* Animation for sliding the card from the bottom */
   @keyframes slideIn {
     from {
       transform: translateY(50px);
@@ -54,7 +47,6 @@
     }
   }
   
-  /* Responsive layout for smaller screens */
   @media (max-width: 768px) {
     .country-grid {
       grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
