--- a/src/components/css/CountryDetails.css
+++ b/src/components/css/CountryDetails.css
@@ -1,5 +1,4 @@
 body{
-    /* background-image: linear-gradient(to bottom right, #43cea2, #185a9d); */
   width: 100%;
   height: 100%;
   background: repeating-linear-gradient(
@@ -17,13 +16,12 @@ body{
     width: auto;
     border-radius: 20px;
     padding: 5%;
-    /* background-image: linear-gradient(to right, #f06b6b, #f7f291); */
     background-color: white;
     box-shadow: 
-    0 0 5px rgba(192, 192, 192, 0.8),   /* Inner glow */
-    0 0 10px rgba(192, 192, 192, 0.6),  /* Medium glow */
-    0 0 15px rgba(192, 192, 192, 0.4),  /* Outer glow */
-    0 0 20px rgba(192, 192, 192, 0.3);  /* Strongest outer glow */
+    0 0 5px rgba(192, 192, 192, 0.8),  
+    0 0 10px rgba(192, 192, 192, 0.6),  
+    0 0 15px rgba(192, 192, 192, 0.4), 
+    0 0 20px rgba(192, 192, 192, 0.3);  
 }
 
 
